docs: update README

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "codpro-js",
   "version": "1.2.1",
   "bin": {
-    "codpro-js": "./src/index.js"
+    "codpro-js": "src/index.js"
   },
   "description": "Simple storage & DOM helper library",
   "main": "dist/codpro-js.umd.js",
